Update JVM Options